Time: 227 ms (26.73%), Space: 45.3 MB (62.61%) - LeetHub